docs/source/_static/style.css
/* *********************OVERRIDE TABLE WIDTH RESTRICTIONS********************* */
.wy-table-responsive table td, .wy-table-responsive table th {
    /* !important prevents the common CSS stylesheets from
       overriding this as on RTD they are loaded after this stylesheet */
    white-space: normal !important;
}

.wy-table-responsive {
    overflow: visible !important;
}

/* *********************STYLE HEADLINK FOR CODEBLOCK CAPTIONS LIKE OTHER HEADLINKS********************* */
.code-block-caption .headerlink {
    display: none;
    visibility: hidden;
    font-size: 14px;
    font-family: inherit;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
}

.wy-nav-content {
    padding: 1.618em 3.236em;
    height: 100%;
    max-width: 1600px;
    margin: 62px auto 0;
}

.wy-side-nav-search {
    display: block;
    width: 300px;
    padding: 0.809em;
    margin-bottom: 0.809em;
    z-index: 200;
    background-color: transparent;
    text-align: center;
    padding: 0.809em;
    display: block;
    color: #fcfcfc;
    margin-bottom: 0.809em;
}

.wy-nav-side {
    position: fixed;
    top: 62px;
    bottom: 0;
    left: 0;
    padding-bottom: 2em;
    width: 300px;
    overflow-x: hidden;
    overflow-y: hidden;
    min-height: 100%;
    background: #343131;
    z-index: 200;
}

.code-block-caption:hover .headerlink {
    display: inline-block;
}

.code-block-caption .headerlink:after {
    visibility: visible;
    content: "\f0c1";
    font-family: FontAwesome;
    display: inline-block;
}

/* *********************MAKE WHITESPACE VISUALIZATION IN CODE LISTING NOT APPEAR ON SAME VERTCAL POSITION AS DASHES********************* */
.highlight .w {
    vertical-align: 10%;
}

/* MAKE CODE TAGS NON-RED AGAIN */
code,
.rst-content tt {
    color: #000 !important;
}

a {
    color: #ffb81c;
}

a code,
.rst-content a tt {
    color: #2980B9 !important;
}

a:visited code,
.rst-content a:visited tt {
    color: #9B59B6 !important;
}

/* *********************CHANGE TO CENTERD LAYOUT RATHER THAN LEFT JUSTIFIED********************* */
.wy-body-for-nav {
    background-color: #f2f2f2;
    background-image: none;
}

.wy-grid-for-nav {
    max-width: 1200px;
    margin: auto;
    position: relative;
}

.wy-nav-side {
    position: fixed;
    background-color: transparent;
    left: inherit;
}

.wy-nav-content-wrap {
    -webkit-box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);
    -moz-box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);
    box-shadow: 0px 0px 4px 1px rgba(181,181,181,1);     
}

/* *********************LEFT HAND MENU*********************  */
.wy-menu-vertical {
     margin-bottom:120px;
}
.wy-menu-vertical li.current {
    background-color: transparent;
}

.wy-menu-vertical a {
    color: #404040;
    padding: 14.5px 1.618em;
    font-weight: bold;
}

.wy-menu-vertical li.toctree-l1.current a {
    padding: 14.5px 1.618em;
}

.wy-menu-vertical li.current a {
    border: 0px;
    background-color: transparent !important;
    color: #009cde;
}

.toctree-l1:hover, .toctree-l1 a:hover {
    background-color: transparent;
    color: #009cde;
}

.wy-menu-vertical li.on a:hover {
    background-color: transparent;
    color: #ffb81c;
}

.wy-side-nav-search > a {
    color: #009cde;
}

.wy-side-nav-search > a:before {
    content: url('https://robo3d.com/wp-content/uploads/2016/12/robo-logo-1.png');
    display: block;
}

.wy-side-nav-search > div.version {
    color: #999;
}

.wy-side-nav-search input[type="text"] {
    border-color: rgba(0,0,0,.20);
    border-radius: 5px;
}

.wy-menu:before {
    content: url('https://robo3d.com/wp-content/uploads/2016/12/rule.jpg');
}

.wy-menu:after {
    content: url('https://robo3d.com/wp-content/uploads/2016/12/rule.jpg');
}

.wy-menu ul {
    padding-top: 13px;
}

.wy-menu-vertical li.current ul {
    border-left: 2px solid #009cde;
    margin: 0px 0 10px 27px;
    padding-top: 0px;
}

.wy-menu-vertical li.current ul a {
    color: rgb(64, 64, 64);
}
    
.wy-menu-vertical li.toctree-l1 li.toctree-l2 a {
    padding: 10px 24px 10px 12px;
}

.wy-menu-vertical li.toctree-l2.current > a {
    color: #009cde;
    padding: 10px 24px 10px 12px;
}

.wy-menu-vertical li.current ul a:hover {
    color: #009cde;
}

/* *********************TOP/BOTTOM NAV BAR*********************  */
.wy-breadcrumbs {
    max-width: 1200px;
    margin: auto;
    padding: 16px 3.236em 16px 1.618em;
    color: #fff;    
}

.wy-breadcrumbs a {
    color: #ffffff !important;
}

.wy-breadcrumbs a:visited {
    color: #ffffff !important;
}

.wy-breadcrumbs a:hover {
    color: #404040 !important;
}

.wy-nav-content div[role=navigation] {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    background-color: #ffb81c;
    box-shadow: 0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);
}

.wy-nav-content hr {
    display: none; 
}

.rst-footer-buttons {
    top: unset !important;
    padding: 14px 0;
    bottom: 0px;
    z-index: 1000;
}

footer {
    margin-bottom: 62px;
}

.btn-neutral {
    background-color: #ffb81c !important;
    box-shadow: none;
    border: 0px;
    color: #ffffff;
}

.btn-neutral:hover {
    background-color: transparent !important;
}

.rst-versions {
    bottom: 62px;
}

.fa-arrow-circle-right, .fa-arrow-circle-left {
    color: #ffffff;
}

/* *********************RESPONSIVE STYLE*********************  */
@media screen and (max-width: 768px) {
    .wy-nav-content div[role="navigation"] {
        top: 63px;
        background-color: #ffebc0;
        color: #ffb81c; 
    }
    .wy-nav-top {
        position: fixed;
        top: 0;
        width: 100%;
    }
    .wy-nav-side {
        display: none;
        top: 0px;
    }
    .wy-nav-side.shift {
        display: inherit;
    }
    .shift div[role="navigation"] {
        left: 85%;
    }
    .rst-versions {
        bottom: 0px;
    }
    .wy-nav-top {
        background-color: #ffb81c;
    }
    .wy-breadcrumbs {
        color: #404040; 
    }
    .wy-breadcrumbs a {
        color: #404040 !important; 
    }
    .wy-breadcrumbs li a:first-child {
        color: #404040 !important; 
    }
    .rst-footer-buttons {
        background-color: #ffb81c !important;
    }
    .fa-bars:before {
        line-height: 1.8;
    }
}

